# QuantumLab

./: .gitignore  README.md
Code/: QuantumLab.sln
Code/Application/FermionSimulation/: Fermion1D.cpp  FermionSimulation.cpp  FermionSimulation.h  FermionSimulation.vcxproj
Code/Application/QKMeans/: CircuitTest.cpp  ClassicalKmeans.cpp  QAnomalyDetection.cpp  QKMeans.cpp  QKMeans.h  QKMeans.vcxproj  QuantumKmeans.cpp
Code/Application/QuantumFit/: QuantumFit.cpp  QuantumFit.h  QuantumFit.vcxproj  UsefulFunctions.cpp
Code/Application/SimpleTest/: AmplitudeEncodeTest.cpp  AmplitudeEncodeTest.h  GateTest.cpp  GateTest.h  OpenQASM.cpp  OpenQASM.h  SimpleTest.cpp  SimpleTest.h  SimpleTest.vcxproj  SimulatorTest.cpp  SimulatorTest.h
Code/Application/SwapTest/: SwapTest.cpp  SwapTest.h  SwapTest.vcxproj
Code/CMake/: CMakeLists.txt
Code/CMakeWrite/: CMakeWrite.csproj  Program.cs
Code/QuEST340/: .gitignore  QuEST.vcxproj  QuEST.vcxproj.filters  bernstein_vazirani_circuit.vcxproj  grovers_search.vcxproj  temp_createPauliHamilFromFile_914.txt  tests.vcxproj  tests.vcxproj.filters  tutorial_example.vcxproj
Code/QuEST340/QuEST/include/: PlatformFunctions.h  QuEST.h  QuEST_complex.h  QuEST_precision.h  QuEST_private.h
Code/QuEST340/QuEST/src/: QuEST.c  QuEST_common.c  QuEST_private.c  QuEST_qasm.c  QuEST_validation.c  mt19937ar.c
Code/QuEST340/QuEST/src/CPU/: QuEST_cpu.c  QuEST_cpu_distributed.c  QuEST_cpu_internal.h  QuEST_cpu_local.c
Code/QuEST340/QuEST/src/GPU/: QuEST_gpu.cu
Code/QuEST340/examples/: grovers_search.c
Code/QuEST340/tests/: main.cpp  test_calculations.cpp  test_data_structures.cpp  test_decoherence.cpp  test_gates.cpp  test_operators.cpp  test_state_initialisations.cpp  test_unitaries.cpp  utilities.cpp  utilities.hpp
Code/QuEST340/tests/catch/: catch.hpp
Code/QuantumLab/: QuantumLab.h  QuantumLab.vcxproj  QuantumLab.vcxproj.filters  QuantumLabPCH.cpp  QuantumLabPCH.h  cpp.hint
Code/QuantumLab/Base/: CudaIncs.h  OtherComplexFunction.h  PlatformDefines.h  PlatformIncs.h  QLDefine.h  QLFloat.h  QLSetup.h  STLExport.h
Code/QuantumLab/Circuit/: QLGate.cpp  QLGate.h
Code/QuantumLab/Circuit/Ansatz/: CAnsatz.h  CFHEA.cpp  CFHEA.h  CTwoLocal.cpp  CTwoLocal.h  CTwoLocalAddaptive.cpp  CTwoLocalAddaptive.h
Code/QuantumLab/Circuit/Gates/: AmplitudeEncode.cpp  AmplitudeEncode.h  AmplitudeEncodeCuda.cu  CSDDecompose.cpp  CSDDecompose.h  CnUGate.cpp  CnUGate.h  FRGate.cpp  FRGate.cu  FRGate.h  PauliSimulate.cpp  PauliSimulate.h  QuantumFFT.cpp  QuantumFFT.h  QuantumPhaseEstimate.cpp  QuantumPhaseEstimate.h  SimpleEncode.cu  SimpleEncode.h  SimpleGates.cpp  SimpleGates.h  SwapTest.cpp  SwapTest.h  ZYZGate.cpp  ZYZGate.h
Code/QuantumLab/Circuit/Hamitonian/: CHamitonianList.cpp  CHamitonianList.h  CHamitonianPauli.cpp  CHamitonianPauli.h  CHamitonianPauliNeighbour.cpp  CHamitonianPauliNeighbour.h  CHamitonianPauliPlaqutte.cpp  CHamitonianPauliPlaqutte.h  CHamitonianStaggeredJordanWigner1D.cpp  CHamitonianStaggeredJordanWigner1D.h  CHamitonianTerm.cpp  CHamitonianTerm.h  CLattice.h  CLattice1D.cpp  CLattice1D.h  CLattice2D.cu  CLattice2D.h
Code/QuantumLab/Circuit/Subroutine/: Grover.cpp  Grover.h  HHL.cpp  HHL.h  QKMeans.cu  QKMeans.h  QRamSubroutine.cu  QRamSubroutine.h
Code/QuantumLab/ClassicalTools/: QLMatrix.cu  QLMatrix.h  QLRandom.cu  QLRandom.h  QuantumDataViewer.cpp  QuantumDataViewer.cu  QuantumDataViewer.h  ReduceSum.cu  ReduceSum.h
Code/QuantumLab/ClassicalTools/GPUKmeans/: GPUKmeans.cu  GPUKmeans.h
Code/QuantumLab/ClassicalTools/Optimizer/: CAdam.cpp  CAdam.h  CGradientDesend.cpp  CGradientDesend.h  COptimizer.cpp  COptimizer.h
Code/QuantumLab/Simulator/: QLSimulator.cpp  QLSimulator.h  QLSimulatorDensityMatrix.cpp  QLSimulatorDensityMatrix.h  QLSimulatorMatrix.cpp  QLSimulatorMatrix.h  QLSimulatorMeasure.cpp  QLSimulatorMeasure.h  QLSimulatorVector.cpp  QLSimulatorVector.h
Code/QuantumLab/ToolClass/: CBitFlag.h  CCString.cpp  CCString.h  CLinkedList.h  CNMD5.h  CSV.cpp  CSV.h  CYAMLParser.cpp  CYAMLParser.h  EnumGather.h  MemStack.h  STDStringFunctions.h  TArray.h  THashMap.h  Tracer.cpp  Tracer.h
Code/QuantumLab/Variational/: CStateBuilder.cpp  CStateBuilder.h
Code/WriteCMake/: Program.cs  WriteCMake.csproj
Code/WriteCMake/Properties/: AssemblyInfo.cs
Doc/: .gitignore  detail.bib  detail.tex
Doc/Algorithm/: grover.tex  hhl.tex  swap.tex
Doc/BasicTopics/: PhaseKickback.tex
Doc/Input/: AmplitudeEncode.tex  CSDecompose.tex  Superposition.tex  ZYZDecompose.tex
Doc/Simulation/: JordanWigner1D.tex
